WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27018
Fix compile RenderThemeChromiumMac.mm due to API changes from
r45572
https://bugs.webkit.org/show_bug.cgi?id=27018
Summary
Fix compile RenderThemeChromiumMac.mm due to API changes from r45572
Albert J. Wong
Reported
2009-07-06 19:57:30 PDT
A recent change broke the compilation of RenderThemeChromiumMac.mm in the Chromium canary. This change basically updates the chromium portion of the code to better match the RenderThemeMac.mm code and bring our build green again.
Attachments
Compilation fix.
(7.42 KB, patch)
2009-07-06 20:03 PDT
,
Albert J. Wong
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Albert J. Wong
Comment 1
2009-07-06 20:03:25 PDT
Created
attachment 32355
[details]
Compilation fix.
Maciej Stachowiak
Comment 2
2009-07-06 20:26:36 PDT
Comment on
attachment 32355
[details]
Compilation fix. r=me
Eric Seidel (no email)
Comment 3
2009-07-06 20:40:13 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/rendering/RenderThemeChromiumMac.mm M WebCore/rendering/RenderThemeMac.mm Committed
r45585
M WebCore/ChangeLog M WebCore/rendering/RenderThemeMac.mm M WebCore/rendering/RenderThemeChromiumMac.mm
r45585
= c74e050b295bd44f7c57c04a039c3a4c381cc427 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/45585
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug